--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,6 +78,6 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_HOST} '
             cd ${{ secrets.VPS_APP_PATH }} || exit 1
-            docker compose --env-file .env.prod pull
-            docker compose --env-file .env.prod up -d --remove-orphans
+            docker compose pull
+            docker compose up -d --remove-orphans
           '
